<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_background"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:src="@drawable/kucing_anggora"
                android:contentDescription="@string/nama_hewan" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:elevation="8dp"
                android:src="@drawable/detail_back"
                android:background="@drawable/detail_back_background"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/pet_name"
                    android:textSize="28sp"/>

                <ImageView
                    android:id="@+id/img_gender"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/detail_male"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/twinkle_location"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/detail_location" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/detail_item"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_berat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/weight" />

                    <TextView
                        android:layout_below="@id/tv_berat"
                        android:id="@+id/tv_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/pet_weight" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/detail_item"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_umur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/age" />

                    <TextView
                        android:layout_below="@id/tv_umur"
                        android:id="@+id/tv_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/pet_age" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/detail_item"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_jenis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/type" />

                    <TextView
                        android:layout_below="@id/tv_jenis"
                        android:id="@+id/tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:maxLines="2"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/pet_type" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/deskripsi"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/deskripsi_persia"
                android:justificationMode="inter_word"
                />

            <Button
                android:id="@+id/button_adopsi"
                style="@style/ButtonDetail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/adopt"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>